--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Heath Logan Campbell</title>
   </head>
   <body>
-    <h1>Heath Logan Campbell</h1>
+    <h1>Hello world</h1>
   </body>
 </html>
