--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
     <title>Heath Logan Campbell</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Dark forest hypothesis</h1>
+    <p>
+      Putting your voice into the darkness is the scare 
+      thought special if something greater than yourself answers back.
+      So it's easier to just not post anything, upload anything, say anything.
+    </p>
+    <p>
+      There is a theory out there in the world called the dark forest hypothesis which tries to explain
+      why we are alone in this universe. summarising as "any space-faring civilization would view any other intelligent life as an inevitable threat and thus destroy any nascent life that makes itself known"
+      which for the majority of my life I have applied to the internet. feeling uncomfortable even revealing my name for many years.
+    </p>
+    <p>
+      This view point might be faulted. As it's just a pure negative one.
+    </p>
   </body>
 </html>
