--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Dark forest hypothesis</h1>
+    <span>Sunday, 21 April 2024</span>
     <p>
       Putting your voice into the darkness is the scare 
       thought special if something greater than yourself answers back.
